--- a/Chat_Server/Chat_Server.csproj
+++ b/Chat_Server/Chat_Server.csproj
@@ -66,7 +66,16 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Model\ClientConnection.cs" />
+    <Compile Include="Model\MessageString.cs" />
+    <Compile Include="View\Server_Label.xaml.cs">
+      <DependentUpon>Server_Label.xaml</DependentUpon>
+    </Compile>
     <Page Include="View\Chat_Client.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\Client_Label.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -83,12 +92,14 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Command\RelayCommand.cs" />
-    <Compile Include="Network_Helper\Network.cs" />
     <Compile Include="ViewModel\BaseViewModel.cs" />
     <Compile Include="ViewModel\ChatViewModel.cs" />
     <Compile Include="ViewModel\MainViewModel.cs" />
     <Compile Include="View\Chat_Client.xaml.cs">
       <DependentUpon>Chat_Client.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\Client_Label.xaml.cs">
+      <DependentUpon>Client_Label.xaml</DependentUpon>
     </Compile>
     <Compile Include="View\Client_uc.xaml.cs">
       <DependentUpon>Client_uc.xaml</DependentUpon>
@@ -97,6 +108,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="View\Server_Label.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
@@ -125,7 +140,9 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Resource Include="View\51439hd.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\MaterialDesignThemes.4.7.1-ci140\build\MaterialDesignThemes.targets" Condition="Exists('..\packages\MaterialDesignThemes.4.7.1-ci140\build\MaterialDesignThemes.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
