--- a/Chat_Server/packages.config
+++ b/Chat_Server/packages.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Bogus" version="34.0.2" targetFramework="net48" />
   <package id="MaterialDesignColors" version="2.1.1-ci140" targetFramework="net48" />
   <package id="MaterialDesignThemes" version="4.7.1-ci140" targetFramework="net48" />
   <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.39" targetFramework="net48" />
+  <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net48" />
+  <package id="NETStandard.Library" version="2.0.3" targetFramework="net48" />
 </packages>
